--- a/gallery.html
+++ b/gallery.html
@@ -1,63 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,700" />
-    <link rel="stylesheet" type="text/css" href="../css/globalreset.css" />
-    <link rel="stylesheet" type="text/css" href="../css/style.css" />
-    <script type="text/javascript" src="../js/script.js"></script>
-    <link rel="icon" href="../img/logo.png" />
-    <title>Victor Winberg Portfolio</title>
-  </head>
 
-  <body>
-    <div class="container">
-      <header>
-        <input type="checkbox" id="drawer-toggle" />
-        <label for="drawer-toggle">
-          <span class="menu"></span>
-        </label>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,700" />
+  <link rel="stylesheet" type="text/css" href="../css/style.css" />
+  <script type="text/javascript" src="../js/tailwind.js"></script>
+  <link rel="icon" href="../img/logo.png" />
+  <title>Victor Winberg Portfolio</title>
+</head>
 
-        <nav>
-          <ul>
-            <li>
-              <a href="../">
-                <img src="../img/common/logo.svg" alt="My github logotype of the letter V" />
-              </a>
-            </li>
-            <li><a href="./resume">Résumé</a></li>
-            <li><a href="./gallery" class="active">Gallery</a></li>
-            <li><a href="./projects">Projects</a></li>
-            <li><a href="./about">About</a></li>
-          </ul>
-        </nav>
-      </header>
+<body>
+  <div class="container">
+    <header>
+      <input type="checkbox" id="drawer-toggle" />
+      <label for="drawer-toggle">
+        <span class="menu"></span>
+      </label>
 
-      <main>
-        <h1>Gallery</h1>
-        <div class="portfolio">
-          <div class="item large one"><p>Stab, LTH</p></div>
-          <div class="item two"><p>Business Committee, LTH</p></div>
-          <div class="item tall three"><p>The Lost City of Pompeii, Italy</p></div>
-          <div class="item four"><p>Colosseum in Rome, Italy</p></div>
-          <div class="item five"><p>Marseille, France</p></div>
-          <div class="item six"><p>Nollning, LTH</p></div>
-          <div class="item seven"><p>Riomaggiore in Cinque Terre, Italy</p></div>
-          <div class="item tall eight"><p>Genoa, Italy</p></div>
-          <div class="item nine"><p>Villach, Austria</p></div>
-          <div class="item large ten"><p>Trdelnik, Prague, Czech Republic</p></div>
-          <div class="item eleven"><p>Barcelona, Spain</p></div>
-          <div class="item tall twelve"><p>Leaning Tower of Pisa, Italy</p></div>
-          <div class="item thirteen"><p>Blue Lagoon, Ayia Napa</p></div>
-          <div class="item fourteen"><p>La Folie Douce in Val Thorens, France</p></div>
-          <div class="item fifteen"><p>Zion National Park, Utah</p></div>
+      <nav>
+        <ul>
+          <li>
+            <a href="../">
+              <img src="../img/common/logo.svg" alt="My github logotype of the letter V" />
+            </a>
+          </li>
+          <li class="grow"></li>
+          <li><a href="https://github.com/VictorWinberg/">Github</a></li>
+          <li><a href="./gallery" class="active">Gallery</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <h1 class="text-xl font-semibold">Gallery</h1>
+      <div class="my-5 h-1 rounded-sm bg-indigo-500"></div>
+      <div class="portfolio">
+        <div class="item large one">
+          <p>Stab, LTH</p>
         </div>
-      </main>
+        <div class="item two">
+          <p>Business Committee, LTH</p>
+        </div>
+        <div class="item tall three">
+          <p>The Lost City of Pompeii, Italy</p>
+        </div>
+        <div class="item four">
+          <p>Colosseum in Rome, Italy</p>
+        </div>
+        <div class="item five">
+          <p>Marseille, France</p>
+        </div>
+        <div class="item six">
+          <p>Nollning, LTH</p>
+        </div>
+        <div class="item seven">
+          <p>Riomaggiore in Cinque Terre, Italy</p>
+        </div>
+        <div class="item tall eight">
+          <p>Genoa, Italy</p>
+        </div>
+        <div class="item nine">
+          <p>Villach, Austria</p>
+        </div>
+        <div class="item large ten">
+          <p>Trdelnik, Prague, Czech Republic</p>
+        </div>
+        <div class="item eleven">
+          <p>Barcelona, Spain</p>
+        </div>
+        <div class="item tall twelve">
+          <p>Leaning Tower of Pisa, Italy</p>
+        </div>
+        <div class="item thirteen">
+          <p>Blue Lagoon, Ayia Napa</p>
+        </div>
+        <div class="item fourteen">
+          <p>La Folie Douce in Val Thorens, France</p>
+        </div>
+        <div class="item fifteen">
+          <p>Zion National Park, Utah</p>
+        </div>
+      </div>
+    </main>
 
-      <footer>
-        <span>© Copyright <span id="year">2020</span> | Victor Winberg</span>
-      </footer>
-    </div>
-  </body>
+    <footer>
+      <span>© Copyright
+        <script>
+          document.write(new Date().getFullYear());
+        </script> | Victor Winberg
+      </span>
+    </footer>
+  </div>
+</body>
+
 </html>
